# communication_netmanager_standard

./: README.md  netmanager_base_config.gni  ohos.build
frameworks/innerkitsimpl/dnsresolvermanager/src/: dns_addr_info.cpp  dns_resolver_client.cpp
frameworks/innerkitsimpl/ethernetmanager/src/: ethernet_client.cpp  interface_configuration.cpp  static_configuration.cpp
frameworks/innerkitsimpl/netconnmanager/src/: inet_addr.cpp  net_conn_callback_info.cpp  net_conn_client.cpp  net_link_info.cpp  net_specifier.cpp  net_supplier_info.cpp  route.cpp
frameworks/innerkitsimpl/netconnmanager/src/ipc/: net_conn_callback_stub.cpp
frameworks/innerkitsimpl/netpolicymanager/src/: net_policy_client.cpp
frameworks/js/common/: napi_common.cpp  napi_common.h
frameworks/js/dnsresolver/: BUILD.gn
frameworks/js/dnsresolver/include/: napi_dns_resolver.h
frameworks/js/dnsresolver/src/: napi_dns_resolver.cpp
frameworks/js/ethernet/: BUILD.gn
frameworks/js/ethernet/src/: napi_ethernet.cpp
frameworks/js/netpolicy/: BUILD.gn
frameworks/js/netpolicy/include/: napi_net_policy.h
frameworks/js/netpolicy/src/: napi_net_policy.cpp
interfaces/innerkits/native/dnsresolvermanager/: BUILD.gn
interfaces/innerkits/native/dnsresolvermanager/include/: dns_resolver_constants.h
interfaces/innerkits/native/ethernetmanager/: BUILD.gn
interfaces/innerkits/native/ethernetmanager/include/: ethernet_client.h  ethernet_constants.h  interface_configuration.h
interfaces/innerkits/native/netconnmanager/: BUILD.gn
interfaces/innerkits/native/netconnmanager/include/: inet_addr.h  net_conn_callback_info.h  net_conn_client.h  net_conn_constants.h  net_link_info.h  net_specifier.h  net_supplier_info.h
interfaces/innerkits/native/netconnmanager/include/ipc/: i_net_conn_callback.h  net_conn_callback_stub.h
interfaces/innerkits/native/netpolicymanager/: BUILD.gn
interfaces/innerkits/native/netpolicymanager/include/: net_policy_client.h  net_policy_constants.h
prebuilts/librarys/netd/: BUILD.gn
prebuilts/librarys/netd/include/net_mgr_native/include/: net_manager_native.h
sa_profile/: BUILD.gn
services/common/include/: netd_controller.h  timer.h
services/common/src/: broadcast_manager.cpp  netd_controller.cpp
services/dnsresolvermanager/: BUILD.gn
services/dnsresolvermanager/include/: dns_resolver_service.h
services/dnsresolvermanager/src/: dns_resolver_service.cpp
services/dnsresolvermanager/src/ipc/: dns_resolver_service_proxy.cpp  dns_resolver_service_stub.cpp
services/dnsresolvermanager/test/: BUILD.gn
services/dnsresolvermanager/test/unittest/dns_resolver_manager_test/: BUILD.gn  dns_resolver_manager_test.cpp
services/etc/init/: BUILD.gn  netd.cfg  netd.rc
services/ethernetmanager/: BUILD.gn
services/ethernetmanager/include/: dev_interface_state.h  ethernet_management.h  ethernet_service.h
services/ethernetmanager/src/: dev_interface_state.cpp  ethernet_management.cpp  ethernet_service.cpp  netLink_rtnl.cpp
services/ethernetmanager/src/ipc/: ethernet_service_proxy.cpp  ethernet_service_stub.cpp
services/ethernetmanager/test/: BUILD.gn
services/ethernetmanager/test/unittest/ethernet_manager_test/: BUILD.gn  ethernet_manager_test.cpp
services/netconnmanager/: BUILD.gn
services/netconnmanager/include/: net_conn_service.h  net_conn_types.h  net_id_manager.h  net_service.h  net_supplier.h  network.h
services/netconnmanager/include/ipc/: i_net_conn_service.h  net_conn_callback_proxy.h  net_conn_service_proxy.h  net_conn_service_stub.h
services/netconnmanager/include/net_controller/: i_net_controller.h  net_controller_factory.h  telephony_controller.h
services/netconnmanager/src/: net_conn_service.cpp  net_id_manager.cpp  net_service.cpp  net_supplier.cpp  network.cpp
services/netconnmanager/src/ipc/: net_conn_callback_proxy.cpp  net_conn_service_proxy.cpp  net_conn_service_stub.cpp
services/netconnmanager/src/net_controller/: net_controller_factory.cpp  telephony_controller.cpp
services/netconnmanager/test/unittest/net_conn_manager_test/: BUILD.gn  net_conn_callback_test.cpp  net_conn_callback_test.h  net_conn_manager_test.cpp
services/netpolicymanager/: BUILD.gn
services/netpolicymanager/include/: net_policy_define.h  net_policy_file.h  net_policy_service.h  net_policy_traffic.h
services/netpolicymanager/include/ipc/: i_net_policy_service.h  net_policy_service_proxy.h  net_policy_service_stub.h
services/netpolicymanager/src/: net_policy_file.cpp  net_policy_service.cpp  net_policy_traffic.cpp
services/netpolicymanager/src/ipc/: net_policy_service_proxy.cpp  net_policy_service_stub.cpp
services/netpolicymanager/test/: BUILD.gn
services/netpolicymanager/test/unittest/net_policy_manager_test/: BUILD.gn  net_policy_manager_test.cpp
utils/: BUILD.gn
utils/log/include/: net_mgr_log_wrapper.h
