# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/communication/netmanager_standard/netmanager_base_config.gni")

ohos_shared_library("net_conn_manager") {
  sources = [
    "$NETCONNMANAGER_COMMON_DIR/src/broadcast_manager.cpp",
    "$NETCONNMANAGER_COMMON_DIR/src/netd_controller.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/ipc/net_conn_callback_proxy.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/ipc/net_conn_service_stub.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/net_conn_service.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/net_controller/net_controller_factory.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/net_controller/telephony_controller.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/net_id_manager.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/net_service.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/net_supplier.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/network.cpp",
  ]

  include_dirs = [
    "$NETCONNMANAGER_SOURCE_DIR/include",
    "$NETCONNMANAGER_SOURCE_DIR/include/ipc",
    "$NETCONNMANAGER_SOURCE_DIR/include/net_controller",
    "$INNERKITS_ROOT/native/netconnmanager/include",
    "$NETCONNMANAGER_COMMON_DIR/include",
  ]

  deps = [
    "$INNERKITS_ROOT/native/netconnmanager:net_conn_manager_if",
    "$NETMANAGER_BASE_ROOT/utils:net_manager_common",
    "$NETMANAGER_PREBUILTS_DIR/librarys/netd:libnet_manager_native",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "aafwk_standard:want",
    "appexecfwk_standard:libeventhandler",
    "ces_standard:cesfwk_innerkits",
    "core_service:tel_cellular_data_api",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  defines = [
    "NETMGR_LOG_TAG = \"NetConnManager\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  defines += [ "NATIVE_NETD_FEATURE" ]

  if (enable_netmgr_debug) {
    defines += [ "NETMGR_DEBUG" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "netmanager_standard"
  subsystem_name = "communication"
}
