# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/communication/netmanager_standard/netmanager_base_config.gni")

ohos_shared_library("net_policy_manager") {
  sources = [
    "$NETCONNMANAGER_COMMON_DIR/src/netd_controller.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/ipc/net_policy_service_stub.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/net_policy_file.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/net_policy_service.cpp",
    "$NETPOLICYMANAGER_SOURCE_DIR/src/net_policy_traffic.cpp",
  ]

  include_dirs = [
    "$NETPOLICYMANAGER_SOURCE_DIR/include",
    "$NETPOLICYMANAGER_SOURCE_DIR/include/ipc",
    "$NETCONNMANAGER_SOURCE_DIR/include/net_controller",
    "$INNERKITS_ROOT/native/netpolicymanager/include",
    "$INNERKITS_ROOT/native/netconnmanager/include",
    "$NETCONNMANAGER_COMMON_DIR/include",
    "$NETCONNMANAGER_SOURCE_DIR/include",
  ]

  deps = [
    "$NETCONNMANAGER_SOURCE_DIR:net_conn_manager",
    "$NETMANAGER_BASE_ROOT/utils:net_manager_common",
    "$NETMANAGER_PREBUILTS_DIR/librarys/netd:libnet_manager_native",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
  ]

  defines = [
    "NETMGR_LOG_TAG = \"NetPolicyManager\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  defines += [ "NATIVE_NETD_FEATURE" ]

  if (enable_netmgr_debug) {
    defines += [ "NETMGR_DEBUG" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "netmanager_standard"
  subsystem_name = "communication"
}
