# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/communication/netmanager_standard/netmanager_base_config.gni")

SUBSYSTEM_DIR = "//foundation/communication"
NETMANAGER_BASE_ROOT = "$SUBSYSTEM_DIR/netmanager_standard"
INNERKITS_ROOT = "$NETMANAGER_BASE_ROOT/interfaces/innerkits"
NETCONNMANAGER_SOURCE_DIR = "$NETMANAGER_BASE_ROOT/services/netconnmanager"

ohos_unittest("net_conn_manager_test") {
  module_out_path = "netmanager_base/net_conn_manager_test"

  sources = [
    "$NETCONNMANAGER_INNERKITS_SOURCE_DIR/src/ipc/net_conn_callback_stub.cpp",
    "$NETCONNMANAGER_SOURCE_DIR/src/ipc/net_conn_service_proxy.cpp",
    "net_conn_callback_test.cpp",
    "net_conn_manager_test.cpp",
  ]

  include_dirs = [
    "$INNERKITS_ROOT/native/netconnmanager/include",
    "$INNERKITS_ROOT/native/netconnmanager/include/ipc",
    "$NETCONNMANAGER_SOURCE_DIR/include/ipc",
    "$NETCONNMANAGER_SOURCE_DIR/include",
  ]

  deps = [
    "$INNERKITS_ROOT/native/netconnmanager:net_conn_manager_if",
    "$NETCONNMANAGER_SOURCE_DIR:net_conn_manager",
    "$NETMANAGER_BASE_ROOT/utils:net_manager_common",
  ]

  external_deps = [ "ipc:ipc_core" ]

  defines = [
    "NETMGR_LOG_TAG = \"NetConnManager\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  if (enable_netmgr_debug) {
    defines += [ "NETMGR_DEBUG" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "netmanager_standard"
  subsystem_name = "communication"
}

group("unittest") {
  testonly = true
  deps = [ ":net_conn_manager_test" ]
}
