# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/communication/netmanager_standard/netmanager_base_config.gni")

ohos_unittest("net_policy_manager_test") {
  module_out_path = "netmanager_base/net_policy_manager_test"

  sources = [
    "//foundation/communication/netmanager_standard/services/netpolicymanager/src/ipc/net_policy_service_proxy.cpp",
    "net_policy_manager_test.cpp",
  ]

  include_dirs = [
    "$INNERKITS_ROOT/native/netpolicymanager/include",
    "$NETPOLICYMANAGER_SOURCE_DIR/include/ipc",
    "$NETPOLICYMANAGER_SOURCE_DIR/include",
  ]

  deps = [
    "$INNERKITS_ROOT/native/netpolicymanager:net_policy_manager_if",
    "$NETMANAGER_BASE_ROOT/utils:net_manager_common",
  ]

  external_deps = [
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
  ]

  defines = [
    "NETMGR_LOG_TAG = \"NetPolicyManager\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  if (enable_netmgr_debug) {
    defines += [ "NETMGR_DEBUG" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "netmanager_standard"
  subsystem_name = "communication"
}

group("unittest") {
  testonly = true
  deps = [ ":net_policy_manager_test" ]
}
